<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快传终端</string>
    <string name="app_name2">百度地图</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tile_name">快传终端</string>
    <string name="page1">默认</string>
    <string name="page2">本地</string>
    <string name="page3">自定义</string>
    <string name="page4">设置</string>
    <string name="updatefile">上传</string>
    <string name="more_op">设置默认目录</string>
    <string name="pastfile">粘贴</string>
    <string name="cutfile">剪切</string>
    <string name="deletfile">删除</string>
    <string name="copyfile">复制</string>
    <string name="unupdate">未上传(%1$s)</string>
    <string name="updating">上传中(%1$s)</string>
    <string name="updated">已上传(%1$s)</string>
    <string name="pause">暂停</string>
    <string name="start">开始</string>
    <string name="fileunupdate">未上传</string>
    <string name="fileupdateing">上传中</string>
    <string name="fileupdated">已上传</string>
    <string name="fileOp">功能选项</string>
    <string name="folder">文件夹</string>
    <string name="file">文件</string>
    <string name="errnetwork">网络出错，请检查网络!</string>
    <string name="errType">不支持此文件格式!</string>
    <string name="successSetDefDir">设置默认目录成功!</string>
    <string name="successUpdate">文件正在上传中...</string>
    <string name="failedUpdate">请选择上传的文件</string>
    <string name="succesSetAutoUpdate">设置自动上传模式成功！</string>
    <string name="failedSetAutoUpdate">取消自动上传模式成功！</string>
    <!--<string name="ServerIp">220.178.173.140</string>-->
     
  	 <string name="ServerIp">218.246.35.197</string>
   <!-- <string name="ServerIp">220.178.173.140</string>  -->
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="isDeletFile">是否删除该文件</string>
    <string name="p_choose_files">请选择目标文件</string>
    <string name="isMoveFiles">是否剪切选中的文件</string>
    <string name="isPasteFiles">是否粘贴到%1$s文件夹</string>
    <string name="isFileWritePre">没有写入权限</string>
    
    <string name="pleaseContactAdmin">"如需更改，请联系软件供应商"</string>
    <string name="inputError">"输入不规范，请重新输入"</string>
    <string name="changePassword">"更改密码"</string>
    
    <!-- 本地文件系统 -->
    <string name="auto_update_path">(自动上传目录)</string>
    <string name="localeFile">本地文件</string>
    <string name="curNofiles">%1$s没有%2$s的文件</string>
    <string name="curCatagoryNoFiles">该分类没有文件</string>
    <string name="curDirNoChilds">当前文件夹没有文件</string>
    <string name="bxfile_download">已下载文件</string>
    <string name="bxfile_ram">手机内存</string>
    <string name="bxfile_sdcard">SD卡内存</string>
    <string name="bxfile_extsdcard">扩展卡内存</string>
    <string name="bxfile_image">图片</string>
    <string name="bxfile_music">音乐</string>
    <string name="bxfile_video">视频</string>
    <string name="bxfile_media_cnt">(%1$s)</string>
    <string name="bxfile_choosed">已选</string>
    <string name="bxfile_choosedCnt">发送(%1$s)</string>
    <string name="fileViewer">文件查看</string>
    <string name="fileReSend">重新发送</string>
    <string name="openWithOtherApp">用其他应用打开</string>
    <string name="send">发送</string>
    <string name="download">下载</string>
    <string name="attach_open_err">文件打开失败</string>
    <string name="SDCardNotMounted">SDCard未加载</string>
    <string name="auto_file_op">文件类型</string>
    <string name="auto_path_op">文件目录</string>
    <string name="setting_auto_func">设置默认目录</string>
    <string name="settingauto_func">设置自动上传目录或者类型</string>
    <string name="auto_file">自动上传文件类型</string>
    <string name="auto_path">已设置的自动上传目录</string>
    <string name="noAuto_path">没有设置自动上传目录</string>
    <string name="chose_network">选择自动上传使用的网络环境</string>
    <string name="GSM_network">移动网络</string>
    <string name="wifi_network">Wifi</string>
    <string name="file_op">上传文件配置</string>
    <string name="OK">是</string>
    <string name="FALSE">否</string>
    <string name="fileop_tile">上传完成后是否删除源文件</string>
    <string name="default_num">%1$s个文件</string>
    <string name="default_dirname">文件夹名</string>
    <string name="default_numtitle">文件个数</string>
    <string name="default_one">默认目录一</string>
    <string name="default_two">默认目录二</string>
    <string name="default_three">默认目录三</string>
    <string name="default_four">默认目录四</string>
    <string name="default_five">默认目录五</string>
    <string name="browse">浏览</string>
    <string name="notice">警告</string>
    <string name="noticeData">请先设定默认目录</string>
    <string name="maupdate">手动上传</string>
    <string name="moveto">移动到</string>
    <string name="autoupdate">自动上传</string>
    <string name="setDefaultError">当前目录不支持</string>
    <string name="fileIsNull">当前文件不支持</string>
    <string name="noUpdateFile">系统</string>
    <string name="isSetOutUpdate">是否设定%1$s自动上传</string> 
    <string name="isCancelOutUpdate">是否取消%1$s自动上传</string>
    <string name="ErrorDir">设定的目录需要两级以上</string>
     <string name="select_all">全选</string>
      <string name="desselect_all">取消全选</string>

</resources>