<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bind_bg" >

    <LinearLayout
        android:id="@+id/default_left"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
    </LinearLayout>

   <LinearLayout
       android:gravity="center"
        android:id="@+id/default_container_one"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_below="@+id/default_left"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/default_one"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/bxfile_file_no_file_record"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/fileCheckBox_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/default_cb_bg"
                android:button="@null"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <TextView
                android:id="@+id/title_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_one"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/dirname_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_dirname"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/num_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_numtitle"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/default_two"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:background="@drawable/bxfile_file_no_file_record"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/fileCheckBox_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/default_cb_bg"
                android:button="@null"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <TextView
                android:id="@+id/title_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_two"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/dirname_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_dirname"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/num_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_numtitle"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/default_container_two"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:gravity="center"
        android:layout_below="@+id/default_container_one"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/default_three"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/bxfile_file_no_file_record"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/fileCheckBox_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/default_cb_bg"
                android:button="@null"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <TextView
                android:id="@+id/title_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_three"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/dirname_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_dirname"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/num_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_numtitle"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/default_four"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:background="@drawable/bxfile_file_no_file_record"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/fileCheckBox_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/default_cb_bg"
                android:button="@null"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <TextView
                android:id="@+id/title_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_four"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/dirname_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_dirname"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/num_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_numtitle"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/default_container_three"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_below="@+id/default_container_two"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <LinearLayout

            android:id="@+id/default_five"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/bxfile_file_no_file_record"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/fileCheckBox_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/default_cb_bg"
                android:button="@null"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <TextView
                android:id="@+id/title_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_five"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/dirname_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_dirname"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/num_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/default_numtitle"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/text_14sp" />

        </LinearLayout>
        <TextView
            android:layout_marginLeft="50dp"
            android:layout_width="90dp"
            android:layout_height="match_parent" />
    </LinearLayout>

<!--     <include layout="@layout/default_bottom" /> -->
</RelativeLayout>